--- a/files/pki/ssl.cnf
+++ b/files/pki/ssl.cnf
@@ -6,12 +6,12 @@ default_ca              = ca_default
 
 [ca_default]
 dir                     = .
-certs                   = $dir/certs
+certs                   = $dir
 crl_dir                 = $dir/crl
 database                = $dir/index.txt
-new_certs_dir           = $dir/newcerts
-certificate             = $dir/%s_ca_cert.pem
-private_key             = $dir/private/%s_ca_key.pem
+new_certs_dir           = $dir
+certificate             = $dir/koji_ca_cert.crt
+private_key             = $dir/koji_ca_cert.key
 serial                  = $dir/serial
 crl                     = $dir/crl.pem
 x509_extensions         = usr_cert
@@ -19,7 +19,7 @@ name_opt                = ca_default
 cert_opt                = ca_default
 default_days            = 3650
 default_crl_days        = 30
-default_md              = md5
+default_md              = sha256
 preserve                = no
 policy                  = policy_match
 
@@ -45,13 +45,13 @@ countryName_default             = US
 countryName_min                 = 2
 countryName_max                 = 2
 stateOrProvinceName             = State or Province Name (full name)
-stateOrProvinceName_default     = Washington
+stateOrProvinceName_default     = .
 localityName                    = Locality Name (eg, city)
-localityName_default            = Seattle
+localityName_default            = .
 0.organizationName              = Organization Name (eg, company)
 0.organizationName_default      = Example
 organizationalUnitName          = Organizational Unit Name (eg, section)
-organizationalUnitName_default  = example
+organizationalUnitName_default  = .
 commonName                      = Common Name (eg, your name or your server\'s hostname)
 commonName_max                  = 64
 commonName_default              = your_username
